--- a/Numeroscope/.classpath
+++ b/Numeroscope/.classpath
@@ -5,5 +5,13 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
+	<classpathentry kind="lib" path="C:/installs/adt-bundle-windows-x86_64-20140321/sdk/platforms/android-19/android.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="file:/C:/installs/adt-bundle-windows-x86_64-20140321/sdk/docs/reference"/>
+		</attributes>
+		<accessrules>
+			<accessrule kind="nonaccessible" pattern="com/android/internal/**"/>
+		</accessrules>
+	</classpathentry>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
