--- a/Secrets/bin/AndroidManifest.xml
+++ b/Secrets/bin/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.sonar.secrets.java"
+    package="com.sonar.secretspro"
     android:versionCode="78"
     android:versionName="7.8" >
 
@@ -20,7 +20,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.sonar.secrets.Login"
+            android:name="com.sonar.secretspro.Login"
             android:label="@string/app_name"
             android:windowSoftInputMode="stateVisible|adjustPan" >
             <intent-filter>
@@ -30,70 +30,70 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.sonar.secrets.Secrets"
+            android:name="com.sonar.secretspro.Secrets"
             android:label="@string/title_activity_secrets"
-            android:parentActivityName="com.sonar.secrets.Login" >
+            android:parentActivityName="com.sonar.secretspro.Login" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sonar.secrets.Login" />
         </activity>
         <activity
-            android:name="com.sonar.secrets.Help"
+            android:name="com.sonar.secretspro.Help"
             android:label="@string/title_activity_help" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sonar.secrets.Login" />
         </activity>
         <activity
-            android:name="com.sonar.secrets.SettingsActivity"
+            android:name="com.sonar.secretspro.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName="com.sonar.secrets.Login" >
+            android:parentActivityName="com.sonar.secretspro.Login" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sonar.secrets.Login" />
         </activity>
         <activity
-            android:name="com.sonar.secrets.TabsActivity"
+            android:name="com.sonar.secretspro.TabsActivity"
             android:label="@string/title_activity_android_tab_layout"
-            android:parentActivityName="com.sonar.secrets.Login" >
+            android:parentActivityName="com.sonar.secretspro.Login" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sonar.secrets.Login" />
         </activity>
         <activity
-            android:name="com.sonar.secrets.PhotosActivity"
+            android:name="com.sonar.secretspro.PhotosActivity"
             android:label="@string/title_activity_photos"
-            android:parentActivityName="com.sonar.secrets.AndroidTabLayoutActivity" >
+            android:parentActivityName="com.sonar.secretspro.AndroidTabLayoutActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sonar.secrets.AndroidTabLayoutActivity" />
         </activity>
         <activity
-            android:name="com.sonar.secrets.SongsActivity"
+            android:name="com.sonar.secretspro.SongsActivity"
             android:label="@string/title_activity_songs"
-            android:parentActivityName="com.sonar.secrets.AndroidTabLayoutActivity" >
+            android:parentActivityName="com.sonar.secretspro.AndroidTabLayoutActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sonar.secrets.AndroidTabLayoutActivity" />
         </activity>
         <activity
-            android:name="com.sonar.secrets.VideosActivity"
+            android:name="com.sonar.secretspro.VideosActivity"
             android:label="@string/title_activity_videos"
-            android:parentActivityName="com.sonar.secrets.AndroidTabLayoutActivity" >
+            android:parentActivityName="com.sonar.secretspro.AndroidTabLayoutActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sonar.secrets.AndroidTabLayoutActivity" />
         </activity>
         <activity
-            android:name="com.sonar.secrets.FilesActivity"
+            android:name="com.sonar.secretspro.FilesActivity"
             android:label="@string/title_activity_files"
-            android:parentActivityName="com.sonar.secrets.AndroidTabLayoutActivity" >
+            android:parentActivityName="com.sonar.secretspro.AndroidTabLayoutActivity" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.sonar.secrets.AndroidTabLayoutActivity" />
         </activity>
         <activity
-            android:name="com.sonar.secrets.Share"
+            android:name="com.sonar.secretspro.Share"
             android:label="@string/title_activity_share" >
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
